# Origami

./: .gitignore  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  build_windows_msix.ps1  index.html  make_filetype_icons.py  make_icon.py  package-lock.json  package.json  todo_on_mac.md
finder-extension/: FinderSync.swift  OrigamiFinder.entitlements  build.sh
scripts/: build_finder_extension.sh  setup_local_signing.sh
src/: App.tsx  api.ts  icons.tsx  main.tsx  settings.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: install_services.rs
src-tauri/icons/: icon.icns  menu.icns
src-tauri/icons/filetypes/: 7z.icns  bz2.icns  gz.icns  rar.icns  tar.icns  tgz.icns  xz.icns  zip.icns  zst.icns
src-tauri/src/: cli.rs  encoding.rs  lib.rs  macassoc.rs  main.rs  passwords.rs  services.rs  sysauth.rs  sysicon.rs  winassoc.rs  winmat.rs  winmenu.rs
src-tauri/src/archive/: create.rs  edit.rs  extract.rs  list.rs  mod.rs  preview.rs
src-tauri/tests/: engine.rs  services.rs
src/components/: AskDialog.tsx  Browser.tsx  FileExplorer.tsx  MiniProgress.tsx  PathBar.tsx  Welcome.tsx  dialogs.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
windows-extension/: AppxManifest.xml  README.md  build.ps1
windows-extension/explorer-command/: Cargo.toml
windows-extension/explorer-command/src/: lib.rs
