[package]
name = "open-bandizip"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_bandizip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bzip2 = "0.6.1"
chardetng = "1.0.0"
encoding_rs = "0.8.35"
filetime = "0.2.29"
flate2 = "1.1.9"
keyring = "3"
liblzma = { version = "0.4.6", features = ["parallel"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sevenz-rust2 = { version = "0.21.0", features = ["compress", "aes256", "zstd", "deflate", "lz4", "brotli"] }
tar = "0.4.46"
tempfile = "3.27.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.18"
time = "0.3.47"
unrar = "0.5.8"
walkdir = "2.5.0"
zip = { version = "8.6.0", features = ["aes-crypto", "deflate", "deflate64", "bzip2", "lzma", "zstd", "xz", "ppmd", "time"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
winreg = "0.52"
windows = { version = "0.58", features = ["Security_Credentials_UI", "Foundation"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"

[dev-dependencies.tauri]
version = "2"
features = ["test"]
