# 独立 crate（不在主工程 workspace 内，故 macOS 构建不会编译它）。
# 仅在 Windows 上构建：cargo build --release --target x86_64-pc-windows-msvc
[package]
name = "origami-explorer-command"
version = "0.1.0"
edition = "2021"

[lib]
name = "origami_explorer_command"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
